# release-maker

./: Cargo.toml  LICENSE.md  README.md  example.json
ghet/: Cargo.toml  README.md
ghet/src/: cache.rs  git.rs  lib.rs  main.rs
libreleasemaker/: Cargo.toml
libreleasemaker/src/: lib.rs
librmaker/: Cargo.toml
librmaker/src/: lib.rs
release-maker/: Cargo.toml  example.json  explanation.txt
release-maker/src/: main.rs
src/: error.rs  explanation.txt  git.rs  main.rs
