[package]
name = "ghet"
version = "0.1.0"
authors = ["Alex M. M. <acdenissk69@gmail.com>"]
edition = "2018"

[dependencies]
rmaker = { path = "../librmaker" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "0.2", features = ["macros"] }
octocrab = "0.4"
structopt = "0.3"
anyhow = "1.0"
