[package]
name = "ghet"
version = "0.1.0"
authors = ["Alex M. M. <acdenissk69@gmail.com>"]
edition = "2018"

[dependencies]
rmaker = { path = "../librmaker" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.12"
clap = "3.0.0-beta.2"
anyhow = "1.0"

[lib]
name = "ghet"
path = "src/lib.rs"

[[bin]]
name = "ghet"
path = "src/main.rs"
